--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -43,4 +43,4 @@ test-case = "3.2.1"
 network-analysis = ["avail-light-core/network-analysis"]
 rocksdb = ["avail-light-core/rocksdb"]
 multiproof = ["avail-light-core/multiproof"]
-default = ["rocksdb"]
+default = ["rocksdb", "multiproof"]
